[package]
name = "live2o3"
version = "0.0.1"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
description = "Yet another simple rtmp server."
repository = "https://github.com/live2o3/live2o3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rml_rtmp = "0.3.1"
tokio = { version = "0.2.20", features = [ "full" ]}
slab = "0.4.0"
bytes = "0.5"